--- a/CODE/County Labeling And Adjacency.ipynb
+++ b/CODE/County Labeling And Adjacency.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,14 +213,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "county_clean_df.to_excel('county_clean_df.xlsx')\n",
-    "adjacency_df.to_excel('adjacency_df.xlsx')"
+    "adjacency_df.to_excel('./Tableau/Datasources/adjacency_df.xlsx')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dva-project",
    "language": "python",
    "name": "python3"
   },
